--- a/NguyenVanChinh_Lab456/NguyenVanChinh_Lab456.csproj
+++ b/NguyenVanChinh_Lab456/NguyenVanChinh_Lab456.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -176,6 +177,14 @@
     <Compile Include="Migrations\202006040159454_InitialModel.cs" />
     <Compile Include="Migrations\202006040159454_InitialModel.Designer.cs">
       <DependentUpon>202006040159454_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202006040245150_CreateTableCourse.cs" />
+    <Compile Include="Migrations\202006040245150_CreateTableCourse.Designer.cs">
+      <DependentUpon>202006040245150_CreateTableCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202006040246307_PopulateCategoryTable.cs" />
+    <Compile Include="Migrations\202006040246307_PopulateCategoryTable.Designer.cs">
+      <DependentUpon>202006040246307_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -243,6 +252,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -263,6 +273,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202006040159454_InitialModel.resx">
       <DependentUpon>202006040159454_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006040245150_CreateTableCourse.resx">
+      <DependentUpon>202006040245150_CreateTableCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006040246307_PopulateCategoryTable.resx">
+      <DependentUpon>202006040246307_PopulateCategoryTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
